--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,9 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <defaultGoal>compile</defaultGoal>
+
     </build>
 
     <repositories>
