获取不同文本格式的接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,20 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+      #?????????
+    contentnegotiation:
+      favor-parameter: true
 
 knife4j:
   enable: true
+
+
+#notification:
+#  service: email
+
+notification:
+    service: sms
+
+
 
 
