--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <classifier>boot</classifier>
+                </configuration>
             </plugin>
+
         </plugins>
 
     </build>
